Only support multiple build healthchecks for v1

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -17,22 +17,20 @@ h1 {
   width: 60%;
 }
 
-.block{
+.result{
   clear:both;
   margin: 10px 10px 40px 10px;
   padding: 10px;
   width: 100%;
   height: 50px;
-  display: inline-block;
-  float: left;
+  display: block;
 }
 
 .font1 {
   font: 2em "Open Sans", courier;
-  font-weight: bold;
   text-align: left;
-  color: black;
-  font-size: 30px; 
+  color: red;
+  font-size: 32px; 
 }
 
 .font2 {
@@ -42,11 +40,3 @@ h1 {
   color: black;
   font-size: 40px; 
 }
-
-input[type=text] {
-    width: 100px;
-    padding: 12px 20px;
-    margin: 8px 0;
-}
-
-
