--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,16 +1,16 @@
 body {
-  background: white;
+  background: #5cb85c;
 }
 
 h1 {
   font: 2em "Open Sans", courier;
   text-align: center;
-  color: purple;
+  color: black;
   font-size: 48px; 
   font-weight: bold;
 }
 
-.numpad {
+.section {
   display: block;
   margin: auto;
   padding: 20px;
@@ -28,15 +28,8 @@ h1 {
 
 .font1 {
   font: 2em "Open Sans", courier;
-  text-align: left;
-  color: red;
-  font-size: 32px; 
-}
-
-.font2 {
-  font: 2em "Open Sans", courier;
   font-weight: bold;
-  text-align: left;
   color: black;
-  font-size: 40px; 
+  font-size: 32px; 
+  text-align: left;
 }
